--- a/public/data/settings.json
+++ b/public/data/settings.json
@@ -5,23 +5,13 @@
         {
             "name": "English",
             "id": "en",
-            "flagUrl": "images/flags/en-us.png",
-            "default": true
-        },
-        {
-            "name": "Español",
-            "id": "es",
-            "flagUrl": "images/flags/es.png"
+            "flagUrl": "images/flags/en-us.png"
         },
         {
             "name": "Français",
             "id": "fr",
-            "flagUrl": "images/flags/fr.png"
-        },
-        {
-            "name": "中文",
-            "id": "zh",
-            "flagUrl": "images/flags/zh.png"
+            "flagUrl": "images/flags/fr.png",
+            "default": true
         }
     ]
 }
